recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:4: error: ';' expected but '=' found.
            length:Double=length*shrink:Double
                         ^