recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  while(s=!){avance(length:Double)
            right(angle:Double)
            length:Double=length*shrink:Double
            s=s-1}
}